shared/jaeger/poc-daemonset/dp-casandra-schema.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-schema
  #namespace: jaeger-poc
  labels:
    app: cassandra-schema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra-schema
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cassandra-schema
    spec:
      containers:
        - image: jaegertracing/jaeger-cassandra-schema
          name: cassandra-schema
          resources:
          ports:
            - containerPort: 7000
            - containerPort: 7001
            - containerPort: 7199




---

apiVersion: v1
kind: Service
metadata:
  name: cassandra-schema-service
  #namespace: jaeger-poc
  labels:
    app: cassandra-schema
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 7000 
      targetPort: 7000
      name: port-1
    - protocol: TCP
      port: 7001 
      targetPort: 7001
      name: port-2
    - protocol: TCP
      port: 7199 
      targetPort: 7199
      name: port-3
  selector:
    app: cassandra-schema
