shared/jaeger/poc-daemonset/dp-daemonset.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-daemonset
spec:
  selector:
    matchLabels:
      app: jaeger-daemonset
  replicas: 1 
  template:
    metadata:
      labels:
        app: jaeger-daemonset
    spec:
      containers:
        - name: jaeger-daemonset
          image: jaegertracing/jaeger-agent
          args: [ "--reporter.grpc.host-port=jaeger-colector-0.jaeger-colector-service.default.svc.cluster.local:14250,jaeger-colector-1.jaeger-colector-service.default.svc.cluster.local:14250,jaeger-colector-2.jaeger-colector-service.default.svc.cluster.local:14250" ]
          ports:
            - containerPort: 5775
              name: zk-compact-trft
              protocol: UDP

            - containerPort: 5778
              name: config-rest
              protocol: TCP

            - containerPort: 6831
              name: jg-compact-trft
              protocol: UDP

            - containerPort: 6832
              name: jg-binary-trft
              protocol: UDP

            - containerPort: 14271
              name: admin-http
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-daemonset-service
  labels:
    app: jaeger-daemonset
spec:
  type: ClusterIP
  ports:
    - protocol: UDP
      port: 5775
      name: zk-compact-trft

    - protocol: TCP
      port: 5778
      name: config-rest

    - protocol: UDP
      port: 6831
      name: jg-compact-trft

    - protocol: UDP
      port: 6832
      name: jg-binary-trft
    
    - protocol: TCP
      port: 14271
      name: admin-http

  selector:
    app: jaeger-daemonset
